--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,12 @@
             </section>
 
             <section class="text-box">
-                <h1>Free</h1>
+                <h1>Chart</h1>
                 <p>
-                    <canvas id="myChart" width="400" height="400"></canvas>
+                    Drawing this using canvas
+                </p>
+                <p>
+                    <canvas id="myChart" width="300" height="200"></canvas>
                 </p>
             </section>
 
@@ -111,34 +114,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"
         integrity="sha512-aoTNnqZcT8B4AmeCFmiSnDlc4Nj/KPaZyB5G7JnOnUEkdNpCZs1LCankiYi01sLTyWy+m2P+W4XM+BuQ3Q4/Dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js" integrity="sha512-G8JE1Xbr0egZE5gNGyUm1fF764iHVfRXshIoUWCTPAbKkkItp/6qal5YAHXrxEu4HNfPTQs6HOu3D5vCGS1j3w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.js"
+        integrity="sha512-G8JE1Xbr0egZE5gNGyUm1fF764iHVfRXshIoUWCTPAbKkkItp/6qal5YAHXrxEu4HNfPTQs6HOu3D5vCGS1j3w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        var data = {
-            labels: [
-                'Eat out',
-                'Rent',
-                'Groceries'
-            ],
+        var budget = {
+            labels: [],
             datasets: [{
                 label: 'My First Dataset',
-                data: [30, 350, 90],
-                backgroundColor: [
-                    'red',
-                    'blue',
-                    'green'
-                ]
+                data: [],
+                backgroundColor: []
             }]
         };
 
         function createDoughnut() {
+            console.log(budget);
             var ctx = document.getElementById("myChart").getContext("2d");
             var myDoughnut = new Chart(ctx, {
                 type: 'doughnut',
-                data: data
+                data: budget
             });
         }
 
-        createDoughnut();
+        function getBudget() {
+            axios.get('/budget')
+                .then(function (res) {
+                    console.log(res);
+                    for (var i = 0; i < res.data.myBudget.length; i++) {
+                        budget.datasets[0].data[i] = res.data.myBudget[i].budget;
+                        budget.datasets[0].backgroundColor[i] = res.data.myBudget[i].color;
+                        budget.labels[i] = res.data.myBudget[i].title;
+                    }
+                    createDoughnut();
+                });
+        }
+
+        getBudget();
+
     </script>
 </body>
 
